Remove x264 encoder support

x264 does not support odd sized recordings, making it unsuitable for general screen recording.
We now rely solely on OpenH264 for software encoding H.264.
OpenH264 supports odd sized recordings, but it does not support recordings smaller than 16x16.

BUG: 485733