src/pipewireproduce.cpp
@@ -19,7 +19,6 @@
 #include "libopenh264encoder_p.h"
 #include "libvpxencoder_p.h"
 #include "libvpxvp9encoder_p.h"
-#include "libx264encoder_p.h"
 
 extern "C" {
 #include <fcntl.h>
@@ -328,15 +327,6 @@ std::unique_ptr<Encoder> PipeWireProduce::makeEncoder()
             hardwareEncoder->setEncodingPreference(m_encodingPreference);
             if (hardwareEncoder->initialize(size)) {
                 return hardwareEncoder;
-            }
-        }
-
-        if (forcedEncoder.isNull() || forcedEncoder == u"libx264") {
-            auto softwareEncoder = std::make_unique<LibX264Encoder>(profile, this);
-            softwareEncoder->setQuality(m_quality);
-            softwareEncoder->setEncodingPreference(m_encodingPreference);
-            if (softwareEncoder->initialize(size)) {
-                return softwareEncoder;
             }
         }
 
